# opencv_train_chain

./: .gitignore  CMakeLists.txt  README.md
cfg/: example.yaml
opencv/: opencv-orb.py
opencv/python/: opencv-orb
opencv/src/: opencv-orb.cpp  opencv-surf.cpp
training/: otc-collect-data
